# about-me

./: .coverage  .gitignore  Makefile  pyproject.toml  ruff.toml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
examples/: hosting_on_model.ipynb  naive_text_generator.ipynb  store_example.ipynb
services/ingestion_service/: pyproject.toml
services/search_api/: pyproject.toml
tools/admin_cli/: go.mod
