[project]
name = "about-me"
version = "0.1.0"
requires-python = ">=3.12"
description = "Monorepo for all my projects"

[tool.uv.workspace]
members = [
    "packages/search_core",
    "services/search_api",
    "services/ingestion_service"
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "packages/**/tests",
    "services/**/tests"
]
addopts = "--tb=short --cov-report=term-missing"

[tool.coverage.run]
branch = true
parallel = true  # Prevents simultaneous test runs from overriding each other's coverage data