[project]
name = "about-me"
version = "0.1.0"
requires-python = ">=3.12"
description = "Monorepo for all my projects"

[tool.uv.workspace]
members = [
    "packages/search_core",
    "services/search_api",
    "services/ingestion_service",
    "infrastructure/ml_pipelines",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "packages/**/tests",
    "services/**/tests"
]
addopts = "--tb=short --cov-report=term-missing"

[tool.coverage.run]
branch = true
parallel = true  # Prevents simultaneous test runs from overriding each other's coverage data
