[project]
name = "about-me"
version = "0.1.0"
requires-python = ">=3.12"
description = "Monorepo for all my projects"

[tool.uv.workspace]
members = [
    "packages/search_core",
    "services/search_api",
    "services/ingestion_service",
    "infrastructure/ml_pipelines",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
# Point explicitly to the top-level directories. No wildcards.
testpaths = [
    "packages/search_core/tests",
    # Add other service test paths explicitly as you build them:
    # "services/search_api/tests",
    # "services/ingestion_service/tests",
]

# Drastically limits disk scanning overhead
norecursedirs = [
    ".git",
    ".uv",
    ".venv",
    ".pytest_cache",
    "build",
    "dist",
    "__pycache__",
    "node_modules"
]

addopts = "--tb=short"
